# Mandelbrot-Term

./: Cargo.toml  README.md
src/: main.rs
