[package]
name = "mandelbrot_set"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
rayon = "1.8.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"
overflow-checks = false
rpath = false

[features]
portable_simd = []
