[package]
name = "mandelbrot_set"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
rayon = "1.10.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"
overflow-checks = false
rpath = false

[features]
portable_simd = []
